apps/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  annotations:
    metallb.io/loadBalancerIPs: 192.168.0.245
spec:
  selector:
    app: tdarr
  type: LoadBalancer
  ports:
  - name: web-ui
    port: 8265
    targetPort: 8265
    protocol: TCP
  - name: server
    port: 8266
    targetPort: 8266
    protocol: TCP
