apps/tdarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.theorangeserver.net`)
      kind: Rule
      services:
        - name: tdarr
          port: 8265
  tls:
    secretName: wildcard-certificate
